fix for dark mode top bar search form color

--- a/media/styles_unm/top-bar.scss
+++ b/media/styles_unm/top-bar.scss
@@ -124,6 +124,7 @@ nav.unm-navbar {
                 width: 125px;
                 padding: 2px 0;
                 font-size: 12px;
+                color: #222;
 
                 &::placeholder {
                     color: #777;
